classDiagram
  class writers {
  }
  style writers fill:#77AADD
  class azure_writer {
  }
  style azure_writer fill:#77AADD
  class base_writer {
  }
  style base_writer fill:#77AADD
  class local_writer {
  }
  style local_writer fill:#77AADD
  class s3_writer {
  }
  style s3_writer fill:#77AADD
  writers --> azure_writer
  writers --> base_writer
  writers --> local_writer
  writers --> s3_writer
  azure_writer --> base_writer
  local_writer --> base_writer
  s3_writer --> base_writer
